k8s/app.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookreview-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: bookreview-ui-svc
          servicePort: 80
      - path: /api-book
        backend:
          serviceName: bookreview-book-api-svc
          servicePort: 80
      - path: /api-category
        backend:
          serviceName: bookreview-category-api-svc
          servicePort: 80
      - path: /api-rating
        backend:
          serviceName: bookreview-rating-api-svc
          servicePort: 80
      - path: /api-bestseller
        backend:
          serviceName: bookreview-bestseller-api-svc
          servicePort: 80
      - path: /api-reviewcomment
        backend:
          serviceName: bookreview-reviewcomment-api-svc
          servicePort: 80
      - path: /api-onlinestore
        backend:
          serviceName: bookreview-onlinestore-api-svc
          servicePort: 80
